...
        android:layout_marginEnd="8dp"
        android:text="@string/recipe_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@color/material_dynamic_neutral90"
        android:radius="7dp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style='?android:attr/buttonBarStyle'
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/scale"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cookRecipeFrag_btn_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/timer"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
...
